Added Lenis and updated Mobile Nav

--- a/src/overrides/Header.astro
+++ b/src/overrides/Header.astro
@@ -38,6 +38,21 @@ const shouldRenderSearch =
   </div>
 </div>
 
+<script>
+  import Lenis from "lenis";
+  import "lenis/dist/lenis.css";
+
+  // Initialize Lenis
+  const lenis = new Lenis({
+    autoRaf: true,
+  });
+
+  // Listen for the scroll event and log the event data
+  lenis.on("scroll", (e) => {
+    console.log(e);
+  });
+</script>
+
 <style>
   .header {
     gap: var(--sl-nav-gap);
